--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,25 +1,27 @@
 body {
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
   height: 100vh;
+}
+
+.content-container {
+  flex-grow: 1;
+  flex-direction: row-reverse;
+  display: flex;
   overflow: hidden;
 }
 
 .map-container {
-  height: 100vh;
-  flex-grow: 1;
-}
-
-#stop-map { height: 100%; }
-
-.content-container {
-  display: flex;
-  gap: 1rem;
+  width: 50%;
 }
 
 .list-container {
-  flex-grow: 1;
-  max-width: 40%;
-  overflow-y: auto;
+  overflow-y: scroll;
+  width: 50%;
+}
+
+#stop-map {
   height: 100%;
 }
