--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -1,27 +1,31 @@
 body {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  padding: 0;
-  margin: 0;
   height: 100vh;
 }
 
+h1 {
+  padding: 1rem;
+}
+
+#stop-map { height: 100%; }
+
 .content-container {
-  flex-grow: 1;
-  flex-direction: row-reverse;
   display: flex;
+  flex-direction: row-reverse;
   overflow: hidden;
+  height: 100%;
 }
 
 .map-container {
-  width: 50%;
+  width: 60%;
 }
 
 .list-container {
+  width: 40%;
   overflow-y: scroll;
-  width: 50%;
-}
-
-#stop-map {
-  height: 100%;
+  padding: 1rem;
+  padding-top: 0;
 }
